--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
         "storage"
     ],
     "host_permissions": [
+        "<all_urls>",
         "https://mail.google.com/*"
     ],
     "action": {
