--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "openai": "^4.47.1",
     "dotenv": "^16.4.5"
   }
 }
