--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "analysis_URL": "http://localhost:3000/analyzeEmail"
+    "analysis_URL": "https://new-email-tone-check-app-2d7fd1f02c8b.herokuapp.com/analyzeEmail"
 }
