--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "emailtonecheck",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build:client": "tsc -p tsconfig.client.json",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build": "npm run build:client && npm run build:server",
     "start": "node dist/apiGatewayServer.js"
   },
   "keywords": [],
