--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
     "manifest_version": 3,
     "name": "Better My Email",
-    "version": "1.8",
+    "version": "2.0",
     "description": "Extension will evaluate/suggest edits on the basis of Tone, Grammar, Conciseness, Clarity, Personalization,Formatting & Impact",
     "permissions": [
-        "storage"
+        "storage",
+        "tabs",
+        "scripting"
+    ],
+    "host_permissions": [
+        "*://mail.google.com/*"
     ],
     "action": {
         "default_icon": "icons/icon.png",
